# SPDX-License-Identifier: MIT
# Copyright (C) 2019 lambdadroid

option('udev', type: 'boolean', value: true,
       description: 'Install udev rules to automatically set MAC addresses')
option('systemd', type: 'boolean', value: true,
       description : 'Install systemd service file')
option('openrc', type: 'boolean', value: false,
       description: 'Install OpenRC service file')

option('blockdevice', type: 'string', value: '/dev/disk/by-partlabel/factory',
       description: 'Runtime location of factory partition block device')
option('rundir', type: 'string', value: '/run',
       description: 'Runtime directory to store factory information')
